# src/swagger/swagger.json
@@ -7,6 +7,9 @@
   "tags": [
     {
       "name": "Products"
+    },
+    {
+      "name": "Suppliers"
     }
   ],
   "paths": {
@@ -16,7 +19,7 @@
         "summary": "Get list of all products",
         "responses": {
           "200": {
-            "description": "A list of products.",
+            "description": "A list of products",
             "content": {
               "application/json": {
                 "schema": {
@@ -45,6 +48,57 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProductId"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error"
+          },
+          "404": {
+            "description": "No records found in the database matching your query."
+          },
+          "400": {
+            "description": "Invalid data"
+          }
+        }
+      }
+    },
+    "/suppliers": {
+      "get": {
+        "tags": ["Suppliers"],
+        "summary": "Get list of all suppliers",
+        "responses": {
+          "200": {
+            "description": "A list of suppliers",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Supplier"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error"
+          },
+          "400": {
+            "description": "Invalid data"
+          }
+        }
+      }
+    },
+    "/suppliers/{suppliersId}": {
+      "get": {
+        "tags": ["Suppliers"],
+        "summary": "Get single supplier by id",
+        "responses": {
+          "200": {
+            "description": "Full information about this single supplier",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SupplierId"
                 }
               }
             }
@@ -111,6 +165,53 @@
           }
         }
       },
+      "Supplier": {
+        "type": "object",
+        "properties": {
+          "sqlLog": {
+            "$ref": "#/components/schemas/SqlLog"
+          },
+          "suppliers": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": { "type": "integer", "example": 1 },
+                "SupplierID": { "type": "integer", "example": 1 },
+                "CompanyName": { "type": "string", "example": "Exotic Liquids" },
+                "ContactName": { "type": "string", "example": "Charlotte Cooper" },
+                "ContactTitle": { "type": "string", "example": "Purchasing Manager" },
+                "City": { "type": "string", "example": "London" },
+                "Country": { "type": "string", "example": "UK" }
+              }
+            }
+          }
+        }
+      },
+      "SupplierID": {
+        "type": "object",
+        "properties": {
+          "sqlLog": {
+            "$ref": "#/components/schemas/SqlLog"
+          },
+          "supplier": {
+            "type": "object",
+            "properties": {
+              "id": { "type": "integer", "example": 2 },
+              "SupplierID": { "type": "integer", "example": 2 },
+              "CompanyName": { "type": "string", "example": "New Orleans Cajun Delights" },
+              "ContactName": { "type": "string", "example": "Shelley Burke" },
+              "ContactTitle": { "type": "string", "example": "Order Administrator" },
+              "Address": { "type": "string", "example": "P.O. Box 78934" },
+              "City": { "type": "string", "example": "New Orleans" },
+              "Region": { "type": "string", "example": "North America" },
+              "PostalCode": { "type": "string", "example": "70117" },
+              "Country": { "type": "string", "example": "USA" },
+              "Phone": { "type": "string", "example": "(100) 555-4822" }
+            }
+          }
+        }
+      },
       "SqlLog": {
         "type": "array",
         "items": {
@@ -118,7 +219,7 @@
           "properties": {
             "querySqlLog": {
               "type": "string",
-              "example": "SELECT \"id\", \"ProductID\", \"ProductName\", \"QuantityPerUnit\", \"UnitPrice\", \"UnitsInStock\", \"UnitsOnOrder\" FROM products1;"
+              "example": "SELECT \"id\", \"ProductID\", \"ProductName\", \"QuantityPerUnit\", \"UnitPrice\", \"UnitsInStock\", \"UnitsOnOrder\" FROM products;"
             },
             "startTime": { "type": "string", "example": "2023-06-22T13:18:57.665Z" },
             "finishTime": { "type": "string", "example": "2023-06-22T13:18:57.710Z" },
